fix(Icon): vertical-align: middle

--- a/src/components/Icon/style.css
+++ b/src/components/Icon/style.css
@@ -1,4 +1,5 @@
 .e-icon {
   height: var(--e-font-size-2);
+  vertical-align: middle;
   width: var(--e-font-size-2);
 }
